# rutas

./: README.md  docker-compose.yml  pyproject.toml
rutas/: pyvenv.cfg
rutas/Scripts/: activate  activate.bat
src/alpesonline/api/: __init__.py  rutas.py
src/alpesonline/config/: db.py
src/alpesonline/modulos/rutas/aplicacion/: __init__.py  dto.py  handlers.py  mapeadores.py
src/alpesonline/modulos/rutas/aplicacion/comandos/: base.py  programar_ruta.py
src/alpesonline/modulos/rutas/dominio/: entidades.py  eventos.py  excepciones.py  fabricas.py  repositorios.py
src/alpesonline/modulos/rutas/infraestructura/: consumidores.py  despachadores.py  dto.py  fabricas.py  mapeadores.py  proyecciones.py  repositorios.py
src/alpesonline/modulos/rutas/infraestructura/schema/v1/: comandos.py  eventos.py
tests/unit/api/: test_api.py
